Update dcache-minimal-installation.md